Minor login screen adjustment

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -14,9 +14,9 @@
 <body>
     <!--<p>Login</p>
     <a id="login" href="/login/auth/google">Login with Google</a> -->
-    <h1 class="hero main">Eris</h2>
+    <h1 class="hero main"></h2>
     <div id="container" onclick="sendLogin()">
-        <h2 class="hero semi">Sign in</h3>
+        <h2 class="hero semi">Eris</h3>
         <a id="google" href="/login/auth/google">
             <img src="../assets/g-logo.png">
             <p>Sign in with Google</p>
