added github button

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -12,13 +12,16 @@
     <title>Login</title>
 </head>
 <body>
-    <!--<p>Login</p>
-    <a id="login" href="/login/auth/google">Login with Google</a> -->
-    <div id="container" onclick="sendLogin()">
+    <div class="container main">
         <h2 class="hero">Eris</h3>
         <a id="google" href="/login/auth/google">
             <img src="../assets/g-logo.png">
             <p>Sign in with Google</p>
+        </a>
+    </div>
+    <div class="container credits">
+        <a id="github" href="https://github.com/RoyalTwo/eris">
+            <img src="../assets/GitHub-Mark-32px.png">
         </a>
     </div>
 </body>
