--- a/public/login/login.html
+++ b/public/login/login.html
@@ -24,5 +24,15 @@
             <img src="../assets/GitHub-Mark-32px.png">
         </a>
     </div>
+    <h1>Sign in</h1>
+<form action="/login/auth" method="post">
+    <section>
+        <input id="email" name="email" type="text" autocomplete="email" required autofocus>
+    </section>
+    <section>
+        <input id="current-password" name="password" type="password" autocomplete="current-password" required>
+    </section>
+    <button type="submit">Sign in</button>
+</form>
 </body>
 </html>
