--- a/public/login/login.html
+++ b/public/login/login.html
@@ -12,9 +12,9 @@
     <title>Login</title>
 </head>
 <body>
-    <h1 class="hero">Eris.</h1>
+    <h1 class="hero">Eris</h1>
     <div class="container main">
-        <h2 class="secondary">sign in </h3>
+        <h2 class="secondary">Hello, again.</h3>
             <div class="form-cont">
                 <form action="/login/auth" method="post">
                     <div class="email">
@@ -32,7 +32,7 @@
                 <button type="submit" class="signin">Sign in</button>
             </form>
             </div>
-        <a class="small register" href="/login/signup">need an account?</a>
+        <a class="small register" href="/login/signup">Sign up</a>
     </div>
     <div class="container credits">
         <a id="github" href="https://github.com/RoyalTwo/eris">
