--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../signup/signup.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/signup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Work+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap" rel="stylesheet">
-    <script src="../signup/signup.js" defer></script>
-    <title>Document</title>
+    <script src="../assets/js/signup.js" defer></script>
+    <title>Signup</title>
 </head>
 <body>
     <h1 class="hero">Eris</h1>
